path to img files

--- a/css/style.css
+++ b/css/style.css
@@ -823,7 +823,7 @@ body {
 
 .first-screen {
   height: 650px;
-  background: url(/img/svg/first-screen.svg) center center no-repeat;
+  background: url(../img/svg/first-screen.svg) center center no-repeat;
   background-size: cover;
 }
 
