--- a/scss/_first.scss
+++ b/scss/_first.scss
@@ -1,6 +1,6 @@
 .first-screen {
   height: 650px;
-  background: url(/img/svg/first-screen.svg) center center no-repeat;
+  background: url(../img/svg/first-screen.svg) center center no-repeat;
   background-size: cover;
 }
 .first-screen-title {
